Add change password feature for admin users
